<resources>
    <string name="app_name">Contractor Central</string>
    <string name="next_inspection">Next Inspection</string>
    <string name="next_payment_due">Next Payment Due</string>
    <string name="loading">Loading</string>
    <string name="empty_project_list_message_title">Your list is currently empty.</string>
    <string name="empty_project_list_message">Pull down to refresh the project list.</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="not_available">N/A</string>
    <string name="none_schedule">None Scheduled</string>
    <string name="no_payment_due">None</string>
    <string name="schedule_inspection">Schedule Inspection</string>
    <string name="projects">Projects</string>
    <string name="info">Info</string>
    <string name="permits">Permits</string>
    <string name="fees">Fees</string>
    <string name="billed">Billed</string>
    <string name="more_actions">More Actions</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="call">Call</string>
    <string name="view_all_contacts">View All Contacts</string>
    <string name="unknown_permit">Unknown Permit</string>
    <string name="empty_contact_list_message_title">No Contact</string>
    <string name="empty_contact_list_message"></string>
    <string name="count_project_loaded">%d projects loaded...</string>
    <string name="status">Status</string>
    <string name="schedule_another_inspection">Schedule Another Inspection</string>
    <string name="add_from_address_book">Add from Address Book</string>
    <string name="add_new">Add New</string>
    <string name="cancel_inspection">Cancel</string>
    <string name="reschedule_inspection">Reschedule</string>
    <string name="Log_in">Log in</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contractor_app">CONTRACTOR</string>
    <string name="contractor_central">CENTRAL</string>
    <string name="learn_more">Learn More</string>
    <string name="login_to_civicid">Log In to Civic ID</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="remove_agency">Remove Agency</string>
	<string name="terms_of_Use">Terms of Use</string>
	<string name="term_title">Please Read &amp; Accept the Terms of Use before Continuing</string>
	<string name="term_descrip">The Software Application provided to you (“You”) by Accela, Inc. (“Accela”) are subject to the following Terms of Use (“TOU”).  The Software Application, including any updates, enhancements, or new features, are subject to the TOU and attached Privacy Policy; nothing herein will be construed to create any benefits, rights, or responsibilities in any other parties.\nBy downloading or using this Software Application or accompanying documentation you agree to the following terms and conditions.  Please review them carefully before installation and/or acceptance.</string>
	<string name="term_title1">1. DEFINITIONS</string>
	<string name="term_descript1">The “Software Application” shall mean the software provided by Accela to offer services related to Accela and any other software or documentation which enables the use of the application.</string>
	<string name="term_title2">2. LICENSE AND PROPRIETARY RIGHTS</string>
	<string name="term_descript2">The Software Application allows you to access certain functionality available from Accela Automation. Such access will be governed by the Contractor Application Terms of Use. Accela retains full ownership in the Software Application and grants to You a limited, nonexclusive, nontransferable license to use the Software Application, subject to the terms and conditions provided herein.\nAll trademarks, copyright, database rights and other intellectual property rights of any nature in the Software Application together with the underlying software code are owned either directly by Accela or by Accela’s licensors. The Software Application is protected under the laws of the United States and the individual states and by international treaty provisions.</string>
	<string name="term_title3">3. WARRANTY</string>
	<string name="term_descript3">Accela warrants that it has full power and authority to grant this license and that the Software Application does not infringe on any existing intellectual property rights of any third party.  If a third party claims that the Software does infringe, Accela may, at its sole option, secure for You the right to continue using the Software or modify the Software Application so that it does not infringe.  Accela will have the sole right to conduct the defense of any legal action and all negotiations for its settlement or compromise.  Accela has no obligation for any claim based upon a modified version of the Software Application or the combination or operation of the Software Application with any product, data, or apparatus not provided by Accela.\nThe Software Application will perform in material conformance to its published specifications. Except as expressly set forth herein, Accela disclaims any and all express and implied warranties, including but not necessarily limited to warranties of merchantability and fitness for a particular purpose.  Accela provides no warranty whatsoever for any third-party hardware or software products.\nAny personal information you supply to Accela when using the Software Application will be used by Accela in accordance with its Privacy Policy, which are attached to these Terms of Use.</string>
	<string name="term_title4">4. LIMITATION OF LIABILITY/INDEMNITY</string>
	<string name="term_descript4">In no event will Accela be liable for any direct, indirect, special, punitive, exemplary or consequential losses or damages of whatsoever kind arising out of your use or access to the Software Application, including loss of profit or the like whether or not in the contemplation of the parties, whether based on breach of contract, tort (including negligence), product liability or otherwise. 11.2. Accela is not liable to you for any damage or alteration to your equipment including but not limited to computer equipment, handheld device or mobile telephones as a result of the installation or use of the Application. Accela’s total liability to You under this agreement will not exceed the fees paid by You for the annual use of the Software Application.\nYou are solely responsible for any content you provide using the Software Application and warrant that you have appropriate rights to provide such content. You agree to defend, indemnify and hold harmless Accela, its independent contractors, service providers and consultants, and their respective directors, employees and agents, from and against any claims, damages, costs, liabilities and expenses (including, but not limited to, reasonable attorneys’ fees) arising out of or related to any content you post, store, or otherwise transmit using the Software Application, including without limitation any actual or threatened suit, demand or claim made against Accela and/or its independent contractors, service providers, employees, directors or consultants, arising out of or relating to content you provide, your conduct, your violation of this TOU or your violation of the rights of any third party.</string>
	<string name="term_title5">5. GENERAL</string>
	<string name="term_descript5">No other rights are granted by implication, estoppel or otherwise.\nIf any provision of this Agreement is invalid or unenforceable under applicable law, it shall not affect the validity or enforceability of the remainder of the terms of this Agreement, and without further action by the parties hereto, such provision shall be reformed to the minimum extent necessary to make such provision valid and enforceable.\nYour rights under this TOU shall terminate if you fail to comply with any of the terms or conditions of this TOU and do not cure such failure in a reasonable period.  If all your rights under this TOU terminate, you agree to cease use of the Application. Upon any termination or expiration of this TOU, all rights granted to You are cancelled and revert to Accela.</string>
	<string name="term_title6">6. ASSIGNMENT</string>
	<string name="term_descript6">Accela may assign its rights and obligations hereunder for purposes of financing or pursuant to corporate transactions involving the sale of all or substantially all of its stock or assets.</string>
	<string name="term_title7">7. JURISDICTION</string>
	<string name="term_descript7">This TOU is governed by the laws of the State of California and the intellectual property laws of the United States of America and international treaties.  No party to this Agreement will bring a legal action under this TOU more than one year after the cause of action arose.  Each party waives its rights to a jury trial in any resulting litigation.</string>
	<string name="term_title8">Attachment 1 - Privacy Policy</string>
	<string name="term_descript8">The use of the Software Application is subject to this Privacy Policy, which is incorporated into and made a part of the Terms of Use, and governs the handling of personal and non-personal information from all users.\nThe following information explains the use of information provided in conjunction with the use of the Software Application and should be read before submitting information. Accela reserves the right to make changes to this Policy and our practices may be changed.  All changes will be posted and changes will only apply to activities and information on a prospective basis. Your use of the Software Application confirms your acceptance the practices described in this Policy.  If at any time you do not agree to be subject to any modified Privacy Policy, you may no longer use the Software Application.\nBy providing any personal information to Accela, You acknowledge and hereby unambiguously consent to the transfer to, collection and processing of such information. You may not use the Software Application if you do not agree to such transfer to, collection, and processing of your personal information in the United States.\nPersonally identifiable information, such as email addresses, names, postal addresses, etc., is only collected when voluntarily submitted by users of the site and will be used in accordance with this Policy.</string>
	<string name="term_title9">Cookie/Tracking Technology</string>
	<string name="term_descript9">The Software Application may use cookie and tracking technology depending on the features offered. Cookie and tracking technology are useful for gathering information about the use of the Software Application. Cookies cannot collect Personal information, but if you have provided personally identifiable previously, cookies can be linked to such information. We reserve the right to share cookie and tracking information with third parties. </string>
	<string name="term_title10">Specific Circumstances for Distribution</string>
	<string name="term_descript10">Information may be provided to governmental agencies or private entities assisting in fraud prevention or investigation: to prevent unauthorized transactions or protect against actual or potential fraud; to investigate fraud; or as otherwise permitted or required by law. The information is provided under the condition that it is utilized for the specifically established purpose. </string>
	<string name="term_title11">Security</string>
	<string name="term_descript11">Your personally identifiable information/payment information is only accessible to authorized employees, agents and contractors who have expressly agreed to keep the information confidential. </string>
	<string name="accept_continue">Accept &amp; Continue</string>
</resources>