<?xml version="1.0" encoding="utf-8"?>
<com.accela.contractorcentral.view.ElasticScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.accela.contractorcentral.view.FontTextView
            style="@style/FontStyle.H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/term_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.accela.contractorcentral.view.FontTextView
                    style="@style/FontStyle.H5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/terms_of_Use" />
            </RelativeLayout>

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descrip" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title1" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript1" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title2" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript2" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title3" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript3" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title4" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript4" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_title5" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_descript5" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_title6" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript6" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title7" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript7" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title8" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript8" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title9" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript9" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title10" />

            <com.accela.contractorcentral.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/term_descript10" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/term_title11" />

            <com.accela.contractorcentral.view.FontTextView
                style="@style/FontStyle.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_descript11" />

            <Button
                android:id="@+id/acceptTermBtnId"
                style="@style/ButtonStyle.Solid_Blue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:textColor="@drawable/button_text_color"
                android:text="@string/accept_continue" />
        </LinearLayout>
    </LinearLayout>

</com.accela.contractorcentral.view.ElasticScrollView>