<?xml version="1.0" encoding="utf-8"?>


<com.accela.contractorcentral.view.ElasticScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginLayoutId"
        android:background="@color/background_gray"
        android:orientation="vertical">

        <com.accela.contractorcentral.view.FontTextView
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/login_to_civicid"
    		style="@style/FontStyle.H6"
    		android:layout_margin="15dp"
    		android:layout_gravity="center_horizontal">
    	</com.accela.contractorcentral.view.FontTextView>
    	
        <com.accela.contractorcentral.view.PaddingEditTextView
            android:id="@+id/loginUsernameId"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/card_background_white"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
             />

        <com.accela.contractorcentral.view.PaddingEditTextView
            android:id="@+id/loginPasswordId"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/EditTextStyle"
            android:background="@drawable/card_background_white"
            android:hint="@string/password"
            android:inputType="textPassword"
             />


        <Button
             android:id="@+id/loginButtonLoginId"
             style="@style/ButtonStyle.Solid_Blue"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/Log_in" 
             android:textColor="@drawable/button_text_color"
             android:layout_margin="30dp" />

    </LinearLayout>
   </FrameLayout>
    
</com.accela.contractorcentral.view.ElasticScrollView>