<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/card_background_white"
    android:orientation="vertical" 
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft = "12dp"
    android:paddingRight = "12dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
         >
		<com.accela.contractorcentral.view.FontTextView
		    android:id="@+id/contactTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle.SubTitle_Bold"
            android:text="@string/contacts" />

    </LinearLayout>
     <FrameLayout
         	android:id="@+id/contactLineId"
	        android:layout_width="match_parent"
	        android:layout_height="1dp" 
	        android:background="#FF000000"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="5dp"
	        >
	 </FrameLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    >
		<!-- need to wrap by linearLayout, otherwise can't displayed -->
		<com.accela.contractorcentral.view.ContactListView 
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/listContact"
	    	/>
	</LinearLayout>
	</LinearLayout>
	<Button
          android:id="@+id/buttonViewContacts"
          style="@style/ButtonStyle.Solid_White"
          android:layout_marginBottom="1dp"
          android:layout_marginLeft="0dp"
          android:layout_marginRight="0dp"
          android:text="@string/view_all_contacts"/>
	<LinearLayout 
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	    <Button
          android:id="@+id/buttonAddFromId"
          style="@style/ButtonStyle.Solid_White_No_Round_Corner"
          android:layout_marginBottom="1dp"
          android:layout_width="0dp"
          android:layout_weight="3"
          android:visibility="gone"
          android:text="@string/add_from_address_book"/>
	   <Button
          android:id="@+id/buttonAddNewId"
          style="@style/ButtonStyle.Solid_White_No_Round_Corner"
          android:layout_marginBottom="1dp"
          android:layout_marginLeft="-1dp"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="2"
          android:visibility="gone"
          android:text="@string/add_new"/>
	</LinearLayout>
</LinearLayout>

